[package]
name = "can_decode"
version = "0.1.0"
edition = "2024"
authors = ["Millan Kumar <millankumar@gmail.com>", "Purdue Electric Racing"]
description = "Decode CAN frames into Signals"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/PurdueElectricRacing/can_decode"
homepage = "https://github.com/PurdueElectricRacing/can_decode"
keywords = ["CAN", "parse", "decode", "unpack", "dbc"]

[dependencies]
can-dbc = "6.0.0"
log = "0.4"
