[package]
name = "can_decode"
version = "0.4.0"
edition = "2024"
authors = ["Millan Kumar <millankumar@gmail.com>", "Purdue Electric Racing"]
description = "Decode and encode CAN frames into messages/signals in a fast and easy way."
license = "MIT"
readme = "./README.md"
repository = "https://github.com/PurdueElectricRacing/can_decode"
homepage = "https://github.com/PurdueElectricRacing/can_decode"
keywords = ["CAN", "decode", "encode", "dbc", "ecu"]
categories = ["embedded", "automotive", "encoding", "parsing"]

[dependencies]
can-dbc = "8.0.0"
log = "0.4"